force-app/main/default/objects/Payment__c/fields/Bouncing_Charge__c.field-meta.xml
<CustomField>
    <fullName>Bouncing_Charge__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bouncing Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>