force-app/main/default/objects/Payment__c/fields/CompanyId__c.field-meta.xml
<CustomField>
    <fullName>CompanyId__c</fullName>
    <formula>Receipt__r.CompanyId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Id</label>
    <type>Text</type>
</CustomField>