force-app/main/default/objects/Payment__c/fields/Docdate__c.field-meta.xml
<CustomField>
    <fullName>Docdate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Doc date</label>
    <type>Date</type>
</CustomField>