force-app/main/default/objects/Payment__c/fields/Receipt_Id__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Id__c</fullName>
    <formula>Receipt__r.Receipt_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Id</label>
    <type>Text</type>
</CustomField>