force-app/main/default/objects/Payment__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <label>SAP  Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>